--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ p {
       gap: 2rem;
 
       .thumbnail {
-        object-fit: cover;
+        object-fit: contain;
         flex-shrink: 0;
       }
 
